--- a/assets/css/partials/_layout.scss
+++ b/assets/css/partials/_layout.scss
@@ -25,10 +25,11 @@
     background-position: 50% 0;
     opacity: 0.9;
 }
-// ---------END HOME---------
+
+// ---------END HOME--------------
 
 // ------------HERO----------------
-.hero{
+.hero {
     color: $white-normal;
     min-height: 80vh;
     display: flex;
@@ -37,18 +38,20 @@
     justify-content: center;
     padding: 14px;
 
-    h1{
+    h1 {
         text-align: center;
         line-height: 150%;
         max-width: 940px;
         font-size: 48px;
     }
-    p{
+
+    p {
         text-align: center;
         margin: 14px 0;
     }
 }
-.button-contact{
+
+.button-contact {
     padding: 14px 28px;
     color: $white-normal;
     background-color: $red-normal;
@@ -57,74 +60,168 @@
     font-weight: 600;
     margin: 14px 0;
 }
-.button-contact:hover{
+
+.button-contact:hover {
     animation: scaleButton 0.8s alternate infinite;
 }
 
-@keyframes scaleButton{
+@keyframes scaleButton {
     from {
         transform: scale(1);
     }
+
     to {
         transform: scale(1.07);
     }
 }
 
 @media screen and (max-width: 768px) {
-    .hero{
+    .hero {
         min-height: 60vh;
     }
-    h1{
+
+    h1 {
         font-size: 34px;
         padding: 0 14px;
         width: 100%;
     }
-    p{
+
+    p {
         font-size: 14px;
     }
 }
 
-@media screen and (max-width:480px){
-    .hero h1{
+@media screen and (max-width:480px) {
+    .hero h1 {
         font-size: 24px;
     }
-    .hero p{
+
+    .hero p {
         font-size: 12px;
     }
 }
-.about{
+// ------- END HERO -----------
+
+// ------- ABOUT --------------
+.about {
     background-color: $primary-normal;
     overflow: hidden;
     color: $white-normal;
 }
-.about-content{
+
+.about-content {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 14px;
     padding: 34px 14px 64px 14px; //A idéia é descolar da parte de baixo
 
-    img{
+    img {
         max-width: 570;
     }
 }
-.about-content div{
+
+.about-content div {
     flex: 1; //Cada item terá o tamanho inteiro que conseguir na tela
 }
-.about-description{
-    h2{
+
+.about-description {
+    h2 {
         font-size: 38px;
         margin-bottom: 24px;
     }
-    p{
-        margin-bottom:14px;
+
+    p {
+        margin-bottom: 14px;
         line-height: 150%;
     }
 }
-@media screen and(max-width:768px){
-    .about-content{
+@media screen and (max-width:768px) {
+    .about-content {
         flex-direction: column;
     }
 }
 
-//----- end about -------
+
+//----- END ABOUT -------
+
+//----- SERVICES ------
+.services {
+    display: flex;
+    background-color: $white-normal;
+    color: $black-normal;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 54px 14px;
+}
+
+.services-content h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 38px;
+    margin-bottom: 14px;
+}
+
+.services-content p {
+    line-height: 150%;
+    margin-bottom: 14px;
+    text-align: center;
+    max-width: 780px;
+}
+.haircuts{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 44px 34px 44px;
+    gap: 16px;
+}
+.haircut{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: $white-normal;
+    border-radius: 8px;
+    box-shadow: 0px -1px 17px -4px rgba(0,0,0,0.45);
+   
+    overflow: hidden;
+
+    img{
+        width: 100%;
+        max-width: 354px;
+        transition: transform 0.2s;
+    }
+}
+.haircut img:hover{
+    transform: scale(1.2);
+    z-index: 1;
+}
+.haircut-info{
+    width: 100%;
+    display: flex;
+    justify-content:  space-between;
+    padding: 14px;
+    background-color: $white-normal;
+    z-index: 99;
+}
+.haircut-info button{
+    color: $white-normal;
+    background-color: $red-normal;
+    padding: 4px 8px;
+    border-radius: 5px;
+    border: 0;
+    cursor: default; // Se não for ter ação para o usuário, não usar cursor pointer
+}
+
+@media screen and (max-width: 768px) {
+    .haircuts {
+        flex-direction: column;
+    }
+    .haircuts {
+        max-width: 740px;
+    }
+}
+
+//------------ END SERVICES -----------
+
+//------------ FOOTER --------------
