--- a/assets/css/partials/_layout.scss
+++ b/assets/css/partials/_layout.scss
@@ -100,6 +100,7 @@
         font-size: 12px;
     }
 }
+
 // ------- END HERO -----------
 
 // ------- ABOUT --------------
@@ -136,6 +137,7 @@
         line-height: 150%;
     }
 }
+
 @media screen and (max-width:768px) {
     .about-content {
         flex-direction: column;
@@ -169,44 +171,50 @@
     text-align: center;
     max-width: 780px;
 }
-.haircuts{
+
+.haircuts {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 44px 34px 44px;
     gap: 16px;
 }
-.haircut{
+
+.haircut {
     flex: 1;
     display: flex;
     flex-direction: column;
     background-color: $white-normal;
     border-radius: 8px;
-    box-shadow: 0px -1px 17px -4px rgba(0,0,0,0.45);
-   
+    box-shadow: 0px -1px 17px -4px rgba(0, 0, 0, 0.45);
+
     overflow: hidden;
 
-    img{
+    img {
         width: 100%;
         max-width: 354px;
         transition: transform 0.2s;
     }
 }
-.haircut img:hover{
+
+.haircut img:hover {
     transform: scale(1.2);
     z-index: 1;
 }
-.haircut-info{
+
+.haircut-info {
     width: 100%;
     display: flex;
-    justify-content:  space-between;
+    justify-content: space-between;
     padding: 14px;
     background-color: $white-normal;
     z-index: 99;
 }
-.haircut-info button{
+
+.haircut-info button {
     color: $white-normal;
     background-color: $red-normal;
+    font-family: Orbitron, sans-serif;
     padding: 4px 8px;
     border-radius: 5px;
     border: 0;
@@ -217,6 +225,7 @@
     .haircuts {
         flex-direction: column;
     }
+
     .haircuts {
         max-width: 740px;
     }
@@ -224,4 +233,67 @@
 
 //------------ END SERVICES -----------
 
-//------------ FOOTER --------------
+//------------ FOOTER -----------------
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 54px 0;
+    gap: 24px;
+    color: $white-normal;
+    background-color: $black-normal;
+    
+}
+
+.footer-icons {
+    display: flex;
+    
+    gap: 14px;
+    color: $white-normal;
+}
+
+//-------------- END FOOTER ------------
+
+//-----------Botão Whats --------------
+.btn-whatsapp{
+    position: fixed;
+    bottom: 14px;
+    right: 24px;
+    z-index: 99; //sobrepor todos os elemntos
+    
+    img{
+        max-width: 74px;
+        transition: transform 0.4s;
+    }
+
+    img:hover{
+        transform: scale(1.1);
+    }
+
+}
+.btn-whatsapp .tooltip-text{
+    visibility: hidden;
+    position: absolute;
+    width: 120px;
+    top: 8px;
+    left: -144px;
+    padding: 6px;
+    border-radius: 8px;
+    background-color: $black-normal;
+    color: $white-normal;
+    opacity: 0;
+    transition: opacity 0.4s;
+}
+.btn-whatsapp:hover .tooltip-text{
+    visibility: visible; //para que o tooltip text apareça
+    opacity: 1;
+}
+
+@media screen  and (max-width:768px){
+    .btn-whatsapp{
+        img{
+            max-width: 64px;
+        }
+    }
+}
