--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -264,6 +264,7 @@ i {
 .haircut-info button {
   color: #FFFFFF;
   background-color: #d94140;
+  font-family: Orbitron, sans-serif;
   padding: 4px 8px;
   border-radius: 5px;
   border: 0;
@@ -276,6 +277,61 @@ i {
   }
   .haircuts {
     max-width: 740px;
+  }
+}
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 54px 0;
+  gap: 24px;
+  color: #FFFFFF;
+  background-color: #232224;
+}
+
+.footer-icons {
+  display: flex;
+  gap: 14px;
+  color: #FFFFFF;
+}
+
+.btn-whatsapp {
+  position: fixed;
+  bottom: 14px;
+  right: 24px;
+  z-index: 99;
+}
+.btn-whatsapp img {
+  max-width: 74px;
+  transition: transform 0.4s;
+}
+.btn-whatsapp img:hover {
+  transform: scale(1.1);
+}
+
+.btn-whatsapp .tooltip-text {
+  visibility: hidden;
+  position: absolute;
+  width: 120px;
+  top: 8px;
+  left: -144px;
+  padding: 6px;
+  border-radius: 8px;
+  background-color: #232224;
+  color: #FFFFFF;
+  opacity: 0;
+  transition: opacity 0.4s;
+}
+
+.btn-whatsapp:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .btn-whatsapp img {
+    max-width: 64px;
   }
 }
 body {
